name:             hython
version:          1.0
build-type:       Simple
cabal-version:    >= 1.2

executable        hython
  build-depends:  base,
                  containers,
                  mtl,
                  array,
                  utf8-string,
                  regex-base,
                  regex-compat,
                  transformers,
                  unordered-containers,
                  filepath,
                  safe,
                  directory,
                  monad-loops,
                  executable-path,
                  hashable,
                  parsec,
                  hlint,
                  text,
                  bytestring,
                  haskeline,
                  semigroups,
                  uuid
  build-tools:    happy
  other-modules:  Language.Python.Lexer,
                  Language.Python.Parser,
                  REPL,
                  Hython.Interpreter,
                  Hython.Statement,
                  Hython.Environment,
                  Hython.Types,
                  Hython.Expression,
                  Hython.Builtins,
                  Hython.ControlFlow,
                  Hython.Call,
                  Hython.Ref,
                  Hython.AttributeDict,
                  Hython.Class,
                  Hython.Object,
                  Hython.Primitive,
                  Hython.BuiltinTypes.Dict,
                  Hython.BuiltinTypes.List,
                  Hython.Module
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -Wall -O2
  extensions:     FlexibleContexts
